<resources>
    <string name="app_name">Warm Haven</string>
    <string name="warm_haven_user">Warm Haven User</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="my_pets">My Pets</string>
    <string name="my_announcements">my announcements</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="description">Description</string>
    <string name="image_link">image link</string>
    <string name="add">Add</string>
    <string name="choice_pet_type">Choice Pet Type</string>
    <string name="cat">Cat</string>
    <string name="pet_name">Pet Name</string>
    <string name="pets_in_adoption">Pets in adoption</string>
    <string name="announcement">Announcement</string>
    <string name="warm_haven">Warm Haven</string>
    <string-array name="pets">
        <item> Cat</item>
        <item> Dog </item>
        <item>Rabbit</item>
        <item>Hamster</item>
        <item>Bird</item>
        <item>Else</item>
    </string-array>


    <string name="contact_with_the_owner">Contact with the owner</string>
    <string name="contact">Contact</string>
    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="add_new_pet">Add New Pet</string>
    <string name="details">Details</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="delete">Delete</string>
    <string name="Are_you_Sure_to_delete">Are you Sure to delete ?"</string>
    <string name="Save">save</string>
    <string name="no">No</string>
    <string name="Deleted_Successfully">Deleted Successfully</string>
    <string name="An_error_occurred">An error occurred, cannot be delete now</string>
    <string name="permission">Please Grand Permission for phone call </string>
    <string name="uploading">Uploading</string>
    <string name="selecr_an_image_please">Select an image please</string>
    <string name="Choose_Language">Choose Language</string>

</resources>