<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="Details"
    app:startDestination="@id/homeScreenFragment">

    <fragment
        android:id="@+id/homeScreenFragment"
        android:name="com.norah.albaqami.warmhaven.HomeScreenFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_screen">
        <action
            android:id="@+id/action_homeScreenFragment_to_petsListFragment"
            app:destination="@id/petsListFragment" />
        <action
            android:id="@+id/action_homeScreenFragment_to_announcementListFragment"
            app:destination="@id/announcementListFragment" />
        <action
            android:id="@+id/action_homeScreenFragment_to_userPetsFragment"
            app:destination="@id/userPetsFragment" />
    </fragment>


    <fragment
        android:id="@+id/petsListFragment"
        android:name="com.norah.albaqami.warmhaven.pet.ui.PetsListFragment"
        android:label="@string/pets_in_adoption"
        tools:layout="@layout/fragment_pets_list">
        <action
            android:id="@+id/action_petsListFragment_to_addNewPetFragment"
            app:destination="@id/addNewPetFragment" />
        <action
            android:id="@+id/action_petsListFragment_to_petDetailsFragment"
            app:destination="@id/petDetailsFragment" />
    </fragment>


    <fragment
        android:id="@+id/addNewPetFragment"
        android:name="com.norah.albaqami.warmhaven.pet.ui.AddNewPetFragment"
        android:label="@string/add_new_pet" >
        <action
            android:id="@+id/action_addNewPetFragment_to_petsListFragment"
            app:destination="@id/petsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/petDetailsFragment"
        android:name="com.norah.albaqami.warmhaven.pet.ui.PetDetailsFragment"
        android:label="@string/details"
         >
        <action
            android:id="@+id/action_petDetailsFragment_to_petsListFragment"
            app:destination="@id/petsListFragment" />
        <argument
            android:name="petId"
            app:argType="string" />

    </fragment>
    <fragment
        android:id="@+id/announcementListFragment"
        android:name="com.norah.albaqami.warmhaven.announcement.ui.AnnouncementListFragment"
        android:label="@string/announcement"
        tools:layout="@layout/fragment_announcement_list" >
        <action
            android:id="@+id/action_announcementListFragment_to_addAnnouncementFragment"
            app:destination="@id/addAnnouncementFragment" />
        <action
            android:id="@+id/action_announcementListFragment_to_announcementDetailsFragment"
            app:destination="@id/announcementDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addAnnouncementFragment"
        android:name="com.norah.albaqami.warmhaven.announcement.ui.AddAnnouncementFragment"
        android:label="@string/add_announcement"
        tools:layout="@layout/fragment_add_announcement" >
        <action
            android:id="@+id/action_addAnnouncementFragment_to_announcementListFragment"
            app:destination="@id/announcementListFragment" />
    </fragment>
    <fragment
        android:id="@+id/userPetsFragment"
        android:name="com.norah.albaqami.warmhaven.user.ui.UserPetsFragment"
        android:label="fragment_user_pets"
        tools:layout="@layout/fragment_user_pets" />
    <fragment
        android:id="@+id/announcementDetailsFragment"
        android:name="com.norah.albaqami.warmhaven.announcement.ui.AnnouncementDetailsFragment"
        android:label="@string/details" >
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>