<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.ui.EditUserAnnouncementActivity">
        <!--region $pickPet -->
        <ImageView
            android:id="@+id/pet_pic"
            android:layout_width="168dp"
            android:layout_height="155dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07"
            android:src="@drawable/image_placeholder"
            />


        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/select_pet_image"
            android:layout_width="35dp"
            android:layout_height="46dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.192"
            app:layout_constraintStart_toEndOf="@+id/pet_pic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.214"
            app:srcCompat="@drawable/add" />
        <!--endregion-->
        <!--region $title -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:helperText=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_pic">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:inputType="text"
                android:hint="@string/title"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--endregion-->

        <!--region $location -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:helperText=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_container">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:inputType="text"
                android:hint="@string/location"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--endregion-->
        <!--region $phone -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:counterMaxLength="10"
            app:helperText=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_container">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:inputType="number"
                android:hint="@string/phone_number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--endregion-->
        <!--region $description -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:helperText=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/description"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--endregion-->

        <!--region $btn_add -->

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/Save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_container"
            />
        <!--endregion-->
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>